--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
     <script>
       tailwind.config = {
+        darkMode: 'class',
         theme: {
           extend: {
             fontFamily: {
@@ -45,6 +46,12 @@
       .font-display {
         font-family: 'Plus Jakarta Sans', sans-serif;
       }
+      /* Smooth transitions for theme switching */
+      * {
+        transition-property: background-color, border-color, color, fill, stroke;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        transition-duration: 300ms;
+      }
     </style>
   <script type="importmap">
 {
@@ -58,7 +65,7 @@
 }
 </script>
 </head>
-  <body>
+  <body class="bg-white dark:bg-slate-900 transition-colors duration-300">
     <div id="root"></div>
   </body>
 </html>
