--- a/index.html
+++ b/index.html
@@ -53,19 +53,22 @@
         transition-duration: 300ms;
       }
     </style>
-  <script type="importmap">
-{
-  "imports": {
-    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
-    "react-router-dom": "https://esm.sh/react-router-dom@^7.13.0",
-    "react/": "https://esm.sh/react@^19.2.4/",
-    "react": "https://esm.sh/react@^19.2.4",
-    "lucide-react": "https://esm.sh/lucide-react@^0.563.0"
-  }
-}
-</script>
-</head>
+    <script type="importmap">
+    {
+      "imports": {
+        "react": "https://esm.sh/react@19.0.0",
+        "react/": "https://esm.sh/react@19.0.0/",
+        "react-dom": "https://esm.sh/react-dom@19.0.0",
+        "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
+        "react-dom/": "https://esm.sh/react-dom@19.0.0/",
+        "react-router-dom": "https://esm.sh/react-router-dom@6.28.0?deps=react@19.0.0",
+        "lucide-react": "https://esm.sh/lucide-react@0.460.0?deps=react@19.0.0"
+      }
+    }
+    </script>
+  </head>
   <body class="bg-white dark:bg-slate-900 transition-colors duration-300">
     <div id="root"></div>
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
